<resources>
    <string name="app_name">LoginPage</string>
    <string name="app_usuario">Usuario</string>
    <string name="app_password">Password</string>
    <string name="app_ingresar">Ingresar</string>
    <string name="app_registro_usuario">Registro de Usuario</string>
    <string name="app_sexo">Sexo</string>
    <string name="app_nuevo_usuario">Ingrese nuevo Usuario</string>
    <string name="app_ingrese_password">Ingrese Nueva Contraseña</string>
    <string name="app_ingreso_edad">ingrese su Edad</string>
    <string name="app_registrarse">Registrase</string>
    <string name="app_email">Ingrese Mail</string>
    <string name="app_masculino">Masculino</string>
    <string name="app_fememino">Femenino</string>
    <string name="app_re_ingrese_pass">Re-ingrese contraseña</string>
    <string name="app_mensaje">usuario Creado</string>

    <string-array name="edades">
        <item>Seleccione Edad</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
    </string-array>
    <string name="title_activity_activiti_home">ActivitiHome</string>


</resources>
