<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="623dp"
        android:textColor="@color/colorLetras"
        android:text="@string/app_registro_usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:hint="@string/app_nuevo_usuario"
        android:inputType="textPersonName"
        android:text="Name"
        android:entries="@array/edades"
        app:layout_constraintBottom_toTopOf="@+id/editText5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/app_ingrese_password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="256dp" />


    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="181dp"
        tools:layout_editor_absoluteY="353dp" />


</androidx.constraintlayout.widget.ConstraintLayout>